@@ -2,7 +2,7 @@ dnl -----------------------------------------------------------------------
 dnl configure.in for xmp
 dnl
 dnl Process this file with autoconf to produce a configure script.
-dnl $Id: configure.in,v 1.26 2007-09-20 21:29:13 cmatsuoka Exp $
+dnl $Id: configure.in,v 1.27 2007-09-22 17:34:45 cmatsuoka Exp $
 dnl -----------------------------------------------------------------------
 
 AC_INIT
@@ -50,6 +50,9 @@ AC_ARG_ENABLE(arts,
 AC_ARG_ENABLE(arts,
     [  --enable-nas            Compile NAS support])
 
+AC_ARG_ENABLE(xmms-plugin,
+    [  --enable-xmms-plugin    Compile the XMMS plugin])
+
 AC_ARG_ENABLE(bmp-plugin,
     [  --enable-bmp-plugin     Compile the Beep Media Player plugin])
 
@@ -71,6 +74,11 @@ AC_ARG_WITH(esd,
 AC_ARG_WITH(nas,
     [  --with-nas=<path>       NAS prefix (optional)],
     nas_path="$withval")
+
+AC_ARG_WITH(xmms,
+    [  --with-xmms=<path>      XMMS prefix (optional)],
+    xmms_path="$withval",
+    xmms_path="/usr")
 
 AC_ARG_WITH(bmp,
     [  --with-bmp=<path>       Beep Media Player prefix (optional)],
@@ -168,6 +176,34 @@ XMP_CACHED_TEST(for ${oss_path},ac_cv_dir_usr_lib_oss,-d /usr/lib/oss,
         ac_cv_dir_usr_src_sys_i386_isa_sound,
         -d /usr/src/sys/i386/isa/sound,
         CINCS="${CINCS} -I/usr/src/sys/i386/isa/sound",))
+
+dnl -----------------------------------------------------------------------
+dnl Check for XMMS
+dnl -----------------------------------------------------------------------
+
+if test "${enable_xmms_plugin}" = "yes"; then
+    xmms_cflags="`xmms-config --cflags 2>/dev/null`"
+    if test ! -z "${xmms_cflags}"; then
+        AS_MESSAGE(checking for XMMS flags... ${xmms_cflags}...)
+    else
+        if test "${enable_xmms_plugin}" = "yes"; then
+            AC_MSG_ERROR(Can't find XMMS files)
+        fi
+        AC_MSG_WARN(not found)
+        enable_xmms_plugin="no"
+    fi
+fi
+
+if test "${enable_xmms_plugin}" = "yes"; then
+    CPPFLAGS="${CINCS} `xmms-config --cflags`"
+    AC_CHECK_HEADERS(xmms/plugin.h)
+
+    if test "${ac_cv_header_xmms_plugin_h}" = "yes"; then
+        PLUGDIR="bmp"
+	PLUGFLAGS="`xmms-config --cflags` -DENABLE_PLUGIN -DPLUGIN_XMMS"
+	PLUGINST="`xmms-config --input-plugin-dir`"
+    fi
+fi
 
 dnl -----------------------------------------------------------------------
 dnl Check for Beep Media Player
